--- a/app/sqlc.yaml
+++ b/app/sqlc.yaml
@@ -1,9 +1,10 @@
 version: "2"
 sql:
-  - engine: "sqlite"
+  - engine: "postgresql"
     queries: "queries"
     schema: "migrations"
     gen:
       go:
         package: "query"
         out: "query"
+        sql_package: "pgx/v5"
