--- a/app/sqlc.yaml
+++ b/app/sqlc.yaml
@@ -1,10 +1,10 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "queries"
-    schema: "migrations"
+    queries: "db/sql"
+    schema: "db/migrations"
     gen:
       go:
         package: "query"
-        out: "query"
+        out: "db/query"
         sql_package: "pgx/v5"
