--- a/app/.gitignore
+++ b/app/.gitignore
@@ -41,3 +41,7 @@ go.work.sum
 # ignore bobgen generated files
 *.bob.*
 *.bob_test.*
+
+# local dockerfile data directories
+.data-db/
+.data-pgadmin/
