migrate to huma

--- a/api/sqlc.yaml
+++ b/api/sqlc.yaml
@@ -8,3 +8,12 @@ sql:
         package: "query"
         out: "db/query"
         sql_package: "pgx/v5"
+        overrides:
+          - db_type: "uuid"
+            go_type:
+              import: "github.com/google/uuid"
+              type: "UUID"
+          - db_type: "timestamptz"
+            go_type:
+              import: "time"
+              type: "Time"
