--- a/api/sqlc.yaml
+++ b/api/sqlc.yaml
@@ -17,3 +17,8 @@ sql:
             go_type:
               import: "time"
               type: "Time"
+          - db_type: "text"
+            nullable: true
+            go_type:
+              type: "string"
+              pointer: true
