add note about the usage of .env

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,7 @@
+# this is the root .env and should always be committed. It lists every configurable envvar, with defaults useful for
+# local development. Some of these need to be overridden in a higher-precedence .env file when deploying to a live
+# environment - like `.env.production`.
+
 # When using the AWS SDK, the following AWS environment variables must be set.
 # They'll be used when authenticating new AWS Service clients via the Go SDK.
 # Once authenticated, the app will assume roles temporarily to perform actions in AWS.
