--- a/web/package.json
+++ b/web/package.json
@@ -34,5 +34,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"openapi-fetch": "^0.14.1"
 	}
 }
